# contextty

./: .firebaserc  .gitignore  CLAUDE.md  INTERVIEW.md  README.md  RESUME.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: .env.example  CLAUDE.md  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/auth/: firebase.go
backend/internal/config/: config.go
backend/internal/gemini/: client.go
backend/internal/handlers/: stream.go  usage.go
backend/internal/prompts/: system.go
backend/internal/redis/: client.go
frontend/: .env.local.example  .env.production  CLAUDE.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts  vite-env.d.ts
frontend/src/components/: ApiKeyGate.tsx  OutputLine.tsx  PromptBar.tsx  Terminal.tsx  Tooltip.css  Tooltip.tsx
frontend/src/hooks/: useTerminal.ts
frontend/src/lib/: byteScanner.ts  compressor.ts  firebaseAuth.ts  geminiClient.ts  prompts.ts  sessionManager.ts  shellState.ts  trialClient.ts
tui/: pyproject.toml
tui/llm_terminal/: ._widgets  __main__.py  app.py
tui/llm_terminal/llm/: client.py  prompts.py
tui/llm_terminal/session/: compressor.py  manager.py  state.py
tui/llm_terminal/widgets/: output_buffer.py  prompt_bar.py
